// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`schema projection > generates correct batch-processor for multiple optional ownership paths 1`] = `
"import { z, type ZodTypeAny } from "zod";
import type { OutboxEventRecord } from "../client/idb-interface";
import type { Changelog } from "../../prisma/client";
import type { PrismaClient } from "../../prisma/client";
import { validators, keyPathValidators } from "../validators";

type Op = "create" | "update" | "delete";

type EventsFor<V extends Partial<Record<string, ZodTypeAny>>> = {
  [M in keyof V & string]: {
    [O in Op]: {
      entityType: M;
      operation: O;
      payload: z.infer<V[M]>;
    };
  }[Op];
}[keyof V & string];

/**
 * Converts Date fields to string | Date to support JSON-serialized API responses.
 */
type StringifyDates<T> = {
  [K in keyof T]: T[K] extends Date ? string | Date : T[K] extends Date[] ? (string | Date)[] : T[K];
};

export type LogWithRecord<V extends Partial<Record<string, ZodTypeAny>>> = {
  [M in keyof V & string]: Omit<Changelog, "model" | "keyPath"> & {
    model: M;
    keyPath: Array<string | number>;
    record?: z.infer<V[M]> | null;
    changelogId: string;
  };
}[keyof V & string];

/**
 * Variant of LogWithRecord that accepts stringified Dates from JSON serialization.
 * All Date fields in records are converted to string | Date to support API responses.
 */
export type LogWithStringifiedRecord<V extends Partial<Record<string, ZodTypeAny>>> = {
  [M in keyof V & string]: Omit<Changelog, "model" | "keyPath"> & {
    model: M;
    keyPath: Array<string | number>;
    record?: StringifyDates<z.infer<V[M]>> | null;
    changelogId: string;
  };
}[keyof V & string];

export const PushErrorTypes = {
  INVALID_MODEL: "INVALID_MODEL",
  RECORD_VALIDATION_FAILURE: "RECORD_VALIDATION_FAILURE",
  KEYPATH_VALIDATION_FAILURE: "KEYPATH_VALIDATION_FAILURE",
  MISSING_PARENT: "MISSING_PARENT",
  SCOPE_VIOLATION: "SCOPE_VIOLATION",
  UNKNOWN_OPERATION: "UNKNOWN_OPERATION",
  UNKNOWN_ERROR: "UNKNOWN_ERROR",
  MAX_RETRIES: "MAX_RETRIES",
  CUSTOM_VALIDATION_FAILED: "CUSTOM_VALIDATION_FAILED",
};

export interface PushResult {
  id: string;
  appliedChangelogId: string | null;
  error: null | {
    type: keyof typeof PushErrorTypes;
    message: string;
    retryable: boolean;
  };
}

export interface ApplyPushOptions {
  events: OutboxEventRecord[];
  scopeKey: string | ((event: OutboxEventRecord) => string);
  prisma: PrismaClient;
  customValidation?: (
    event: EventsFor<typeof validators>
  ) => { errorMessage: string | null } | Promise<{ errorMessage: string | null }>;
}

export class PermanentSyncError extends Error {
  readonly type: keyof typeof PushErrorTypes;
  constructor(type: keyof typeof PushErrorTypes, message: string) {
    super(message);
    this.type = type;
    Object.setPrototypeOf(this, PermanentSyncError.prototype);
  }
}

const MAX_BATCH_SIZE = 100;

export async function applyPush({
  events,
  scopeKey,
  prisma,
  customValidation,
}: ApplyPushOptions): Promise<PushResult[]> {
  if (events.length > MAX_BATCH_SIZE) {
    throw new Error(\`Batch size \${events.length} exceeds maximum allowed \${MAX_BATCH_SIZE}\`);
  }

  const results: PushResult[] = [];
  for (const event of events) {
    try {
      const resolvedScopeKey = typeof scopeKey === "function" ? scopeKey(event) : scopeKey;
      let result: PushResult;
      switch (event.entityType) {
        case "User": {
          {
            const validation = validators.User.safeParse(event.payload);
            if (!validation.success)
              throw new PermanentSyncError(
                "RECORD_VALIDATION_FAILURE",
                \`Validation failed for model User: \${validation.error.message}\`
              );

            if (customValidation) {
              try {
                const validatedEvent = {
                  ...event,
                  payload: validation.data,
                } as EventsFor<typeof validators>;
                const { errorMessage } = await Promise.resolve(customValidation(validatedEvent));
                if (errorMessage) throw new PermanentSyncError("CUSTOM_VALIDATION_FAILED", errorMessage);
              } catch (error) {
                if (error instanceof PermanentSyncError) throw error;
                throw new PermanentSyncError(
                  "CUSTOM_VALIDATION_FAILED",
                  error instanceof Error ? error.message : "Unknown error in custom validation"
                );
              }
            }

            result = await syncUser(event, validation.data, resolvedScopeKey, prisma);
            break;
          }
        }
        case "Meal": {
          {
            const validation = validators.Meal.safeParse(event.payload);
            if (!validation.success)
              throw new PermanentSyncError(
                "RECORD_VALIDATION_FAILURE",
                \`Validation failed for model Meal: \${validation.error.message}\`
              );

            if (customValidation) {
              try {
                const validatedEvent = {
                  ...event,
                  payload: validation.data,
                } as EventsFor<typeof validators>;
                const { errorMessage } = await Promise.resolve(customValidation(validatedEvent));
                if (errorMessage) throw new PermanentSyncError("CUSTOM_VALIDATION_FAILED", errorMessage);
              } catch (error) {
                if (error instanceof PermanentSyncError) throw error;
                throw new PermanentSyncError(
                  "CUSTOM_VALIDATION_FAILED",
                  error instanceof Error ? error.message : "Unknown error in custom validation"
                );
              }
            }

            result = await syncMeal(event, validation.data, resolvedScopeKey, prisma);
            break;
          }
        }
        case "Recipe": {
          {
            const validation = validators.Recipe.safeParse(event.payload);
            if (!validation.success)
              throw new PermanentSyncError(
                "RECORD_VALIDATION_FAILURE",
                \`Validation failed for model Recipe: \${validation.error.message}\`
              );

            if (customValidation) {
              try {
                const validatedEvent = {
                  ...event,
                  payload: validation.data,
                } as EventsFor<typeof validators>;
                const { errorMessage } = await Promise.resolve(customValidation(validatedEvent));
                if (errorMessage) throw new PermanentSyncError("CUSTOM_VALIDATION_FAILED", errorMessage);
              } catch (error) {
                if (error instanceof PermanentSyncError) throw error;
                throw new PermanentSyncError(
                  "CUSTOM_VALIDATION_FAILED",
                  error instanceof Error ? error.message : "Unknown error in custom validation"
                );
              }
            }

            result = await syncRecipe(event, validation.data, resolvedScopeKey, prisma);
            break;
          }
        }
        case "FoodEntry": {
          {
            const validation = validators.FoodEntry.safeParse(event.payload);
            if (!validation.success)
              throw new PermanentSyncError(
                "RECORD_VALIDATION_FAILURE",
                \`Validation failed for model FoodEntry: \${validation.error.message}\`
              );

            if (customValidation) {
              try {
                const validatedEvent = {
                  ...event,
                  payload: validation.data,
                } as EventsFor<typeof validators>;
                const { errorMessage } = await Promise.resolve(customValidation(validatedEvent));
                if (errorMessage) throw new PermanentSyncError("CUSTOM_VALIDATION_FAILED", errorMessage);
              } catch (error) {
                if (error instanceof PermanentSyncError) throw error;
                throw new PermanentSyncError(
                  "CUSTOM_VALIDATION_FAILED",
                  error instanceof Error ? error.message : "Unknown error in custom validation"
                );
              }
            }

            result = await syncFoodEntry(event, validation.data, resolvedScopeKey, prisma);
            break;
          }
        }
        default:
          throw new PermanentSyncError("INVALID_MODEL", \`No sync handler for model \${event.entityType}\`);
      }
      results.push(result);
    } catch (err) {
      const errorMessage = err instanceof Error ? err.message : "Unknown error";
      const isPermanent = err instanceof PermanentSyncError;

      console.error(\`[Sync Error] Event \${event.id}:\`, {
        entityType: event.entityType,
        operation: event.operation,
        error: err,
        stack: err instanceof Error ? err.stack : undefined,
      });

      results.push({
        id: event.id,
        appliedChangelogId: null,
        error: {
          type: isPermanent ? err.type : "UNKNOWN_ERROR",
          message: isPermanent ? errorMessage : "An unexpected error occurred",
          retryable: !isPermanent,
        },
      });
    }
  }
  return results;
}

export async function pullAndMaterializeLogs({
  prisma,
  scopeKey,
  lastChangelogId,
}: {
  prisma: PrismaClient;
  scopeKey: string;
  lastChangelogId?: string;
}): Promise<Array<LogWithRecord<typeof validators>>> {
  const logs = await prisma.changelog.findMany({
    where: {
      scopeKey,
      id: { gt: lastChangelogId },
    },
    orderBy: { id: "asc" },
    take: 50,
  });
  const validModelNames = ["User", "Meal", "Recipe", "FoodEntry"];
  const results: Array<LogWithRecord<typeof validators>> = [];
  for (const log of logs) {
    if (!validModelNames.includes(log.model)) {
      throw new Error(\`Unknown model: \${log.model}\`);
    }
    switch (log.model) {
      case "User": {
        const keyPathValidation = keyPathValidators.User.safeParse(log.keyPath);
        if (!keyPathValidation.success) {
          throw new Error("Invalid keyPath for User");
        }
        const validKeyPath = keyPathValidation.data;
        if (validKeyPath[0] !== scopeKey) {
          results.push({ ...log, model: "User", keyPath: validKeyPath, record: null, changelogId: log.id });
          break;
        }
        const record = await prisma.user.findUnique({
          where: { id: validKeyPath[0] },
          select: { id: true, name: true, createdAt: true },
        });
        results.push({ ...log, model: "User", keyPath: validKeyPath, record, changelogId: log.id });
        break;
      }
      case "Meal": {
        const keyPathValidation = keyPathValidators.Meal.safeParse(log.keyPath);
        if (!keyPathValidation.success) {
          throw new Error("Invalid keyPath for Meal");
        }
        const validKeyPath = keyPathValidation.data;
        const record = await prisma.meal.findFirst({
          where: { id: validKeyPath[0], user: { id: scopeKey } },
          select: { id: true, name: true, userId: true },
        });
        results.push({ ...log, model: "Meal", keyPath: validKeyPath, record, changelogId: log.id });
        break;
      }
      case "Recipe": {
        const keyPathValidation = keyPathValidators.Recipe.safeParse(log.keyPath);
        if (!keyPathValidation.success) {
          throw new Error("Invalid keyPath for Recipe");
        }
        const validKeyPath = keyPathValidation.data;
        const record = await prisma.recipe.findFirst({
          where: { id: validKeyPath[0], user: { id: scopeKey } },
          select: { id: true, name: true, userId: true },
        });
        results.push({ ...log, model: "Recipe", keyPath: validKeyPath, record, changelogId: log.id });
        break;
      }
      case "FoodEntry": {
        const keyPathValidation = keyPathValidators.FoodEntry.safeParse(log.keyPath);
        if (!keyPathValidation.success) {
          throw new Error("Invalid keyPath for FoodEntry");
        }
        const validKeyPath = keyPathValidation.data;
        const record = await prisma.foodEntry.findFirst({
          where: {
            id: validKeyPath[0],
            OR: [
              { user: { id: scopeKey } },
              { meal: { user: { id: scopeKey } } },
              { recipe: { user: { id: scopeKey } } },
            ],
          },
          select: { id: true, eatenAt: true, quantity: true, mealId: true, recipeId: true, userId: true },
        });
        results.push({ ...log, model: "FoodEntry", keyPath: validKeyPath, record, changelogId: log.id });
        break;
      }
    }
  }
  return results;
}

async function syncUser(
  event: OutboxEventRecord,
  data: z.infer<typeof validators.User>,
  scopeKey: string,
  prisma: PrismaClient
): Promise<PushResult> {
  const { id, operation } = event;
  const keyPath = [data.id];
  const keyPathValidation = keyPathValidators.User.safeParse(keyPath);
  if (!keyPathValidation.success) {
    throw new PermanentSyncError("KEYPATH_VALIDATION_FAILURE", "Invalid keyPath for User");
  }

  const validKeyPath = keyPathValidation.data;

  switch (operation) {
    case "create": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        if (scopeKey !== data.id) {
          throw new PermanentSyncError("SCOPE_VIOLATION", \`Unauthorized: root model pk must match authenticated scope\`);
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "User",
            keyPath: validKeyPath,
            operation: "create",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.user.create({ data });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    case "update": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        // For root model, ownership is determined by pk matching scopeKey
        if (validKeyPath[0] !== scopeKey) {
          throw new PermanentSyncError("SCOPE_VIOLATION", \`Unauthorized: User pk does not match authenticated scope\`);
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "User",
            keyPath: validKeyPath,
            operation: "update",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.user.upsert({
          where: { id: validKeyPath[0] },
          create: data,
          update: data,
        });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    case "delete": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        if (validKeyPath[0] !== scopeKey) {
          throw new PermanentSyncError("SCOPE_VIOLATION", \`Unauthorized: User pk does not match authenticated scope\`);
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "User",
            keyPath: validKeyPath,
            operation: "delete",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.user.deleteMany({
          where: { id: validKeyPath[0] },
        });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    default:
      throw new PermanentSyncError("UNKNOWN_OPERATION", \`Unknown operation: \${operation}\`);
  }
}

async function syncMeal(
  event: OutboxEventRecord,
  data: z.infer<typeof validators.Meal>,
  scopeKey: string,
  prisma: PrismaClient
): Promise<PushResult> {
  const { id, operation } = event;
  const keyPath = [data.id];
  const keyPathValidation = keyPathValidators.Meal.safeParse(keyPath);
  if (!keyPathValidation.success) {
    throw new PermanentSyncError("KEYPATH_VALIDATION_FAILURE", "Invalid keyPath for Meal");
  }

  const validKeyPath = keyPathValidation.data;

  switch (operation) {
    case "create": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        const parentRecord = await tx.user.findUnique({
          where: { id: data.userId },
          select: { id: true },
        });

        if (!parentRecord || parentRecord.id !== scopeKey) {
          throw new PermanentSyncError(
            "SCOPE_VIOLATION",
            \`Unauthorized: Meal parent is not owned by authenticated scope\`
          );
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "Meal",
            keyPath: validKeyPath,
            operation: "create",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.meal.create({ data });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    case "update": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        const record = await tx.meal.findUnique({
          where: { id: validKeyPath[0] },
          select: { user: { select: { id: true } } },
        });

        if (record) {
          // Case A: Record exists - verify ownership from DB
          if (record.user.id !== scopeKey) {
            throw new PermanentSyncError(
              "SCOPE_VIOLATION",
              \`Unauthorized: Meal is not owned by the authenticated scope\`
            );
          }
          if (data.userId !== scopeKey) {
            throw new PermanentSyncError("SCOPE_VIOLATION", \`Cannot reassign Meal to different User\`);
          }
        } else {
          // Case B: Record doesn't exist (resurrection) - verify ownership from payload
          if (data.userId !== scopeKey) {
            throw new PermanentSyncError("SCOPE_VIOLATION", \`Cannot resurrect Meal into different User\`);
          }
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "Meal",
            keyPath: validKeyPath,
            operation: "update",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.meal.upsert({
          where: { id: validKeyPath[0] },
          create: data,
          update: data,
        });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    case "delete": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        const record = await tx.meal.findUnique({
          where: { id: validKeyPath[0] },
          select: { user: { select: { id: true } } },
        });

        if (record) {
          if (record.user.id !== scopeKey) {
            throw new PermanentSyncError(
              "SCOPE_VIOLATION",
              \`Unauthorized: Meal is not owned by the authenticated scope\`
            );
          }
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "Meal",
            keyPath: validKeyPath,
            operation: "delete",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.meal.deleteMany({
          where: { id: validKeyPath[0] },
        });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    default:
      throw new PermanentSyncError("UNKNOWN_OPERATION", \`Unknown operation: \${operation}\`);
  }
}

async function syncRecipe(
  event: OutboxEventRecord,
  data: z.infer<typeof validators.Recipe>,
  scopeKey: string,
  prisma: PrismaClient
): Promise<PushResult> {
  const { id, operation } = event;
  const keyPath = [data.id];
  const keyPathValidation = keyPathValidators.Recipe.safeParse(keyPath);
  if (!keyPathValidation.success) {
    throw new PermanentSyncError("KEYPATH_VALIDATION_FAILURE", "Invalid keyPath for Recipe");
  }

  const validKeyPath = keyPathValidation.data;

  switch (operation) {
    case "create": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        const parentRecord = await tx.user.findUnique({
          where: { id: data.userId },
          select: { id: true },
        });

        if (!parentRecord || parentRecord.id !== scopeKey) {
          throw new PermanentSyncError(
            "SCOPE_VIOLATION",
            \`Unauthorized: Recipe parent is not owned by authenticated scope\`
          );
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "Recipe",
            keyPath: validKeyPath,
            operation: "create",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.recipe.create({ data });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    case "update": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        const record = await tx.recipe.findUnique({
          where: { id: validKeyPath[0] },
          select: { user: { select: { id: true } } },
        });

        if (record) {
          // Case A: Record exists - verify ownership from DB
          if (record.user.id !== scopeKey) {
            throw new PermanentSyncError(
              "SCOPE_VIOLATION",
              \`Unauthorized: Recipe is not owned by the authenticated scope\`
            );
          }
          if (data.userId !== scopeKey) {
            throw new PermanentSyncError("SCOPE_VIOLATION", \`Cannot reassign Recipe to different User\`);
          }
        } else {
          // Case B: Record doesn't exist (resurrection) - verify ownership from payload
          if (data.userId !== scopeKey) {
            throw new PermanentSyncError("SCOPE_VIOLATION", \`Cannot resurrect Recipe into different User\`);
          }
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "Recipe",
            keyPath: validKeyPath,
            operation: "update",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.recipe.upsert({
          where: { id: validKeyPath[0] },
          create: data,
          update: data,
        });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    case "delete": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        const record = await tx.recipe.findUnique({
          where: { id: validKeyPath[0] },
          select: { user: { select: { id: true } } },
        });

        if (record) {
          if (record.user.id !== scopeKey) {
            throw new PermanentSyncError(
              "SCOPE_VIOLATION",
              \`Unauthorized: Recipe is not owned by the authenticated scope\`
            );
          }
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "Recipe",
            keyPath: validKeyPath,
            operation: "delete",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.recipe.deleteMany({
          where: { id: validKeyPath[0] },
        });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    default:
      throw new PermanentSyncError("UNKNOWN_OPERATION", \`Unknown operation: \${operation}\`);
  }
}

async function syncFoodEntry(
  event: OutboxEventRecord,
  data: z.infer<typeof validators.FoodEntry>,
  scopeKey: string,
  prisma: PrismaClient
): Promise<PushResult> {
  const { id, operation } = event;
  const keyPath = [data.id];
  const keyPathValidation = keyPathValidators.FoodEntry.safeParse(keyPath);
  if (!keyPathValidation.success) {
    throw new PermanentSyncError("KEYPATH_VALIDATION_FAILURE", "Invalid keyPath for FoodEntry");
  }

  const validKeyPath = keyPathValidation.data;

  switch (operation) {
    case "create": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        let ownershipVerified = false;
        const p = await tx.user.findUnique({
          where: { id: data.userId },
          select: { id: true },
        });
        if (p && p.id === scopeKey) ownershipVerified = true;
        if (!ownershipVerified && data.mealId != null) {
          const p = await tx.meal.findUnique({
            where: { id: data.mealId },
            select: { user: { select: { id: true } } },
          });
          if (p && p.user.id === scopeKey) ownershipVerified = true;
        }
        if (!ownershipVerified && data.recipeId != null) {
          const p = await tx.recipe.findUnique({
            where: { id: data.recipeId },
            select: { user: { select: { id: true } } },
          });
          if (p && p.user.id === scopeKey) ownershipVerified = true;
        }
        if (!ownershipVerified) {
          throw new PermanentSyncError(
            "SCOPE_VIOLATION",
            \`Unauthorized: FoodEntry parent is not owned by authenticated scope\`
          );
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "FoodEntry",
            keyPath: validKeyPath,
            operation: "create",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.foodEntry.create({ data });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    case "update": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        const record = await tx.foodEntry.findUnique({
          where: { id: validKeyPath[0] },
          select: {
            user: { select: { id: true } },
            meal: { select: { user: { select: { id: true } } } },
            recipe: { select: { user: { select: { id: true } } } },
          },
        });

        if (record) {
          // Case A: Record exists - verify ownership from DB
          if (record.user.id !== scopeKey && record.meal?.user.id !== scopeKey && record.recipe?.user.id !== scopeKey) {
            throw new PermanentSyncError(
              "SCOPE_VIOLATION",
              \`Unauthorized: FoodEntry is not owned by the authenticated scope\`
            );
          }
          let ownershipVerified = false;
          const p = await tx.user.findUnique({
            where: { id: data.userId },
            select: { id: true },
          });
          if (p && p.id === scopeKey) ownershipVerified = true;
          if (!ownershipVerified && data.mealId != null) {
            const p = await tx.meal.findUnique({
              where: { id: data.mealId },
              select: { user: { select: { id: true } } },
            });
            if (p && p.user.id === scopeKey) ownershipVerified = true;
          }
          if (!ownershipVerified && data.recipeId != null) {
            const p = await tx.recipe.findUnique({
              where: { id: data.recipeId },
              select: { user: { select: { id: true } } },
            });
            if (p && p.user.id === scopeKey) ownershipVerified = true;
          }
          if (!ownershipVerified) {
            throw new PermanentSyncError("SCOPE_VIOLATION", \`Cannot reassign FoodEntry to parent outside scope\`);
          }
        } else {
          // Case B: Record doesn't exist (resurrection) - verify ownership from payload
          let ownershipVerified = false;
          const p = await tx.user.findUnique({
            where: { id: data.userId },
            select: { id: true },
          });
          if (p && p.id === scopeKey) ownershipVerified = true;
          if (!ownershipVerified && data.mealId != null) {
            const p = await tx.meal.findUnique({
              where: { id: data.mealId },
              select: { user: { select: { id: true } } },
            });
            if (p && p.user.id === scopeKey) ownershipVerified = true;
          }
          if (!ownershipVerified && data.recipeId != null) {
            const p = await tx.recipe.findUnique({
              where: { id: data.recipeId },
              select: { user: { select: { id: true } } },
            });
            if (p && p.user.id === scopeKey) ownershipVerified = true;
          }
          if (!ownershipVerified) {
            throw new PermanentSyncError("SCOPE_VIOLATION", \`Cannot resurrect FoodEntry into unauthorized scope\`);
          }
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "FoodEntry",
            keyPath: validKeyPath,
            operation: "update",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.foodEntry.upsert({
          where: { id: validKeyPath[0] },
          create: data,
          update: data,
        });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    case "delete": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        const record = await tx.foodEntry.findUnique({
          where: { id: validKeyPath[0] },
          select: {
            user: { select: { id: true } },
            meal: { select: { user: { select: { id: true } } } },
            recipe: { select: { user: { select: { id: true } } } },
          },
        });

        if (record) {
          if (record.user.id !== scopeKey && record.meal?.user.id !== scopeKey && record.recipe?.user.id !== scopeKey) {
            throw new PermanentSyncError(
              "SCOPE_VIOLATION",
              \`Unauthorized: FoodEntry is not owned by the authenticated scope\`
            );
          }
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "FoodEntry",
            keyPath: validKeyPath,
            operation: "delete",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.foodEntry.deleteMany({
          where: { id: validKeyPath[0] },
        });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    default:
      throw new PermanentSyncError("UNKNOWN_OPERATION", \`Unknown operation: \${operation}\`);
  }
}
"
`;

exports[`schema projection > generates correct batch-processor for optional relations in ownership path 1`] = `
"import { z, type ZodTypeAny } from "zod";
import type { OutboxEventRecord } from "../client/idb-interface";
import type { Changelog } from "../../prisma/client";
import type { PrismaClient } from "../../prisma/client";
import { validators, keyPathValidators } from "../validators";

type Op = "create" | "update" | "delete";

type EventsFor<V extends Partial<Record<string, ZodTypeAny>>> = {
  [M in keyof V & string]: {
    [O in Op]: {
      entityType: M;
      operation: O;
      payload: z.infer<V[M]>;
    };
  }[Op];
}[keyof V & string];

/**
 * Converts Date fields to string | Date to support JSON-serialized API responses.
 */
type StringifyDates<T> = {
  [K in keyof T]: T[K] extends Date ? string | Date : T[K] extends Date[] ? (string | Date)[] : T[K];
};

export type LogWithRecord<V extends Partial<Record<string, ZodTypeAny>>> = {
  [M in keyof V & string]: Omit<Changelog, "model" | "keyPath"> & {
    model: M;
    keyPath: Array<string | number>;
    record?: z.infer<V[M]> | null;
    changelogId: string;
  };
}[keyof V & string];

/**
 * Variant of LogWithRecord that accepts stringified Dates from JSON serialization.
 * All Date fields in records are converted to string | Date to support API responses.
 */
export type LogWithStringifiedRecord<V extends Partial<Record<string, ZodTypeAny>>> = {
  [M in keyof V & string]: Omit<Changelog, "model" | "keyPath"> & {
    model: M;
    keyPath: Array<string | number>;
    record?: StringifyDates<z.infer<V[M]>> | null;
    changelogId: string;
  };
}[keyof V & string];

export const PushErrorTypes = {
  INVALID_MODEL: "INVALID_MODEL",
  RECORD_VALIDATION_FAILURE: "RECORD_VALIDATION_FAILURE",
  KEYPATH_VALIDATION_FAILURE: "KEYPATH_VALIDATION_FAILURE",
  MISSING_PARENT: "MISSING_PARENT",
  SCOPE_VIOLATION: "SCOPE_VIOLATION",
  UNKNOWN_OPERATION: "UNKNOWN_OPERATION",
  UNKNOWN_ERROR: "UNKNOWN_ERROR",
  MAX_RETRIES: "MAX_RETRIES",
  CUSTOM_VALIDATION_FAILED: "CUSTOM_VALIDATION_FAILED",
};

export interface PushResult {
  id: string;
  appliedChangelogId: string | null;
  error: null | {
    type: keyof typeof PushErrorTypes;
    message: string;
    retryable: boolean;
  };
}

export interface ApplyPushOptions {
  events: OutboxEventRecord[];
  scopeKey: string | ((event: OutboxEventRecord) => string);
  prisma: PrismaClient;
  customValidation?: (
    event: EventsFor<typeof validators>
  ) => { errorMessage: string | null } | Promise<{ errorMessage: string | null }>;
}

export class PermanentSyncError extends Error {
  readonly type: keyof typeof PushErrorTypes;
  constructor(type: keyof typeof PushErrorTypes, message: string) {
    super(message);
    this.type = type;
    Object.setPrototypeOf(this, PermanentSyncError.prototype);
  }
}

const MAX_BATCH_SIZE = 100;

export async function applyPush({
  events,
  scopeKey,
  prisma,
  customValidation,
}: ApplyPushOptions): Promise<PushResult[]> {
  if (events.length > MAX_BATCH_SIZE) {
    throw new Error(\`Batch size \${events.length} exceeds maximum allowed \${MAX_BATCH_SIZE}\`);
  }

  const results: PushResult[] = [];
  for (const event of events) {
    try {
      const resolvedScopeKey = typeof scopeKey === "function" ? scopeKey(event) : scopeKey;
      let result: PushResult;
      switch (event.entityType) {
        case "User": {
          {
            const validation = validators.User.safeParse(event.payload);
            if (!validation.success)
              throw new PermanentSyncError(
                "RECORD_VALIDATION_FAILURE",
                \`Validation failed for model User: \${validation.error.message}\`
              );

            if (customValidation) {
              try {
                const validatedEvent = {
                  ...event,
                  payload: validation.data,
                } as EventsFor<typeof validators>;
                const { errorMessage } = await Promise.resolve(customValidation(validatedEvent));
                if (errorMessage) throw new PermanentSyncError("CUSTOM_VALIDATION_FAILED", errorMessage);
              } catch (error) {
                if (error instanceof PermanentSyncError) throw error;
                throw new PermanentSyncError(
                  "CUSTOM_VALIDATION_FAILED",
                  error instanceof Error ? error.message : "Unknown error in custom validation"
                );
              }
            }

            result = await syncUser(event, validation.data, resolvedScopeKey, prisma);
            break;
          }
        }
        case "Meal": {
          {
            const validation = validators.Meal.safeParse(event.payload);
            if (!validation.success)
              throw new PermanentSyncError(
                "RECORD_VALIDATION_FAILURE",
                \`Validation failed for model Meal: \${validation.error.message}\`
              );

            if (customValidation) {
              try {
                const validatedEvent = {
                  ...event,
                  payload: validation.data,
                } as EventsFor<typeof validators>;
                const { errorMessage } = await Promise.resolve(customValidation(validatedEvent));
                if (errorMessage) throw new PermanentSyncError("CUSTOM_VALIDATION_FAILED", errorMessage);
              } catch (error) {
                if (error instanceof PermanentSyncError) throw error;
                throw new PermanentSyncError(
                  "CUSTOM_VALIDATION_FAILED",
                  error instanceof Error ? error.message : "Unknown error in custom validation"
                );
              }
            }

            result = await syncMeal(event, validation.data, resolvedScopeKey, prisma);
            break;
          }
        }
        case "FoodEntry": {
          {
            const validation = validators.FoodEntry.safeParse(event.payload);
            if (!validation.success)
              throw new PermanentSyncError(
                "RECORD_VALIDATION_FAILURE",
                \`Validation failed for model FoodEntry: \${validation.error.message}\`
              );

            if (customValidation) {
              try {
                const validatedEvent = {
                  ...event,
                  payload: validation.data,
                } as EventsFor<typeof validators>;
                const { errorMessage } = await Promise.resolve(customValidation(validatedEvent));
                if (errorMessage) throw new PermanentSyncError("CUSTOM_VALIDATION_FAILED", errorMessage);
              } catch (error) {
                if (error instanceof PermanentSyncError) throw error;
                throw new PermanentSyncError(
                  "CUSTOM_VALIDATION_FAILED",
                  error instanceof Error ? error.message : "Unknown error in custom validation"
                );
              }
            }

            result = await syncFoodEntry(event, validation.data, resolvedScopeKey, prisma);
            break;
          }
        }
        default:
          throw new PermanentSyncError("INVALID_MODEL", \`No sync handler for model \${event.entityType}\`);
      }
      results.push(result);
    } catch (err) {
      const errorMessage = err instanceof Error ? err.message : "Unknown error";
      const isPermanent = err instanceof PermanentSyncError;

      console.error(\`[Sync Error] Event \${event.id}:\`, {
        entityType: event.entityType,
        operation: event.operation,
        error: err,
        stack: err instanceof Error ? err.stack : undefined,
      });

      results.push({
        id: event.id,
        appliedChangelogId: null,
        error: {
          type: isPermanent ? err.type : "UNKNOWN_ERROR",
          message: isPermanent ? errorMessage : "An unexpected error occurred",
          retryable: !isPermanent,
        },
      });
    }
  }
  return results;
}

export async function pullAndMaterializeLogs({
  prisma,
  scopeKey,
  lastChangelogId,
}: {
  prisma: PrismaClient;
  scopeKey: string;
  lastChangelogId?: string;
}): Promise<Array<LogWithRecord<typeof validators>>> {
  const logs = await prisma.changelog.findMany({
    where: {
      scopeKey,
      id: { gt: lastChangelogId },
    },
    orderBy: { id: "asc" },
    take: 50,
  });
  const validModelNames = ["User", "Meal", "FoodEntry"];
  const results: Array<LogWithRecord<typeof validators>> = [];
  for (const log of logs) {
    if (!validModelNames.includes(log.model)) {
      throw new Error(\`Unknown model: \${log.model}\`);
    }
    switch (log.model) {
      case "User": {
        const keyPathValidation = keyPathValidators.User.safeParse(log.keyPath);
        if (!keyPathValidation.success) {
          throw new Error("Invalid keyPath for User");
        }
        const validKeyPath = keyPathValidation.data;
        if (validKeyPath[0] !== scopeKey) {
          results.push({ ...log, model: "User", keyPath: validKeyPath, record: null, changelogId: log.id });
          break;
        }
        const record = await prisma.user.findUnique({
          where: { id: validKeyPath[0] },
          select: { id: true, name: true, createdAt: true },
        });
        results.push({ ...log, model: "User", keyPath: validKeyPath, record, changelogId: log.id });
        break;
      }
      case "Meal": {
        const keyPathValidation = keyPathValidators.Meal.safeParse(log.keyPath);
        if (!keyPathValidation.success) {
          throw new Error("Invalid keyPath for Meal");
        }
        const validKeyPath = keyPathValidation.data;
        const record = await prisma.meal.findFirst({
          where: { id: validKeyPath[0], user: { id: scopeKey } },
          select: { id: true, name: true, userId: true },
        });
        results.push({ ...log, model: "Meal", keyPath: validKeyPath, record, changelogId: log.id });
        break;
      }
      case "FoodEntry": {
        const keyPathValidation = keyPathValidators.FoodEntry.safeParse(log.keyPath);
        if (!keyPathValidation.success) {
          throw new Error("Invalid keyPath for FoodEntry");
        }
        const validKeyPath = keyPathValidation.data;
        const record = await prisma.foodEntry.findFirst({
          where: { id: validKeyPath[0], meal: { user: { id: scopeKey } } },
          select: { id: true, eatenAt: true, quantity: true, mealId: true },
        });
        results.push({ ...log, model: "FoodEntry", keyPath: validKeyPath, record, changelogId: log.id });
        break;
      }
    }
  }
  return results;
}

async function syncUser(
  event: OutboxEventRecord,
  data: z.infer<typeof validators.User>,
  scopeKey: string,
  prisma: PrismaClient
): Promise<PushResult> {
  const { id, operation } = event;
  const keyPath = [data.id];
  const keyPathValidation = keyPathValidators.User.safeParse(keyPath);
  if (!keyPathValidation.success) {
    throw new PermanentSyncError("KEYPATH_VALIDATION_FAILURE", "Invalid keyPath for User");
  }

  const validKeyPath = keyPathValidation.data;

  switch (operation) {
    case "create": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        if (scopeKey !== data.id) {
          throw new PermanentSyncError("SCOPE_VIOLATION", \`Unauthorized: root model pk must match authenticated scope\`);
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "User",
            keyPath: validKeyPath,
            operation: "create",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.user.create({ data });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    case "update": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        // For root model, ownership is determined by pk matching scopeKey
        if (validKeyPath[0] !== scopeKey) {
          throw new PermanentSyncError("SCOPE_VIOLATION", \`Unauthorized: User pk does not match authenticated scope\`);
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "User",
            keyPath: validKeyPath,
            operation: "update",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.user.upsert({
          where: { id: validKeyPath[0] },
          create: data,
          update: data,
        });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    case "delete": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        if (validKeyPath[0] !== scopeKey) {
          throw new PermanentSyncError("SCOPE_VIOLATION", \`Unauthorized: User pk does not match authenticated scope\`);
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "User",
            keyPath: validKeyPath,
            operation: "delete",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.user.deleteMany({
          where: { id: validKeyPath[0] },
        });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    default:
      throw new PermanentSyncError("UNKNOWN_OPERATION", \`Unknown operation: \${operation}\`);
  }
}

async function syncMeal(
  event: OutboxEventRecord,
  data: z.infer<typeof validators.Meal>,
  scopeKey: string,
  prisma: PrismaClient
): Promise<PushResult> {
  const { id, operation } = event;
  const keyPath = [data.id];
  const keyPathValidation = keyPathValidators.Meal.safeParse(keyPath);
  if (!keyPathValidation.success) {
    throw new PermanentSyncError("KEYPATH_VALIDATION_FAILURE", "Invalid keyPath for Meal");
  }

  const validKeyPath = keyPathValidation.data;

  switch (operation) {
    case "create": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        const parentRecord = await tx.user.findUnique({
          where: { id: data.userId },
          select: { id: true },
        });

        if (!parentRecord || parentRecord.id !== scopeKey) {
          throw new PermanentSyncError(
            "SCOPE_VIOLATION",
            \`Unauthorized: Meal parent is not owned by authenticated scope\`
          );
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "Meal",
            keyPath: validKeyPath,
            operation: "create",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.meal.create({ data });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    case "update": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        const record = await tx.meal.findUnique({
          where: { id: validKeyPath[0] },
          select: { user: { select: { id: true } } },
        });

        if (record) {
          // Case A: Record exists - verify ownership from DB
          if (record.user.id !== scopeKey) {
            throw new PermanentSyncError(
              "SCOPE_VIOLATION",
              \`Unauthorized: Meal is not owned by the authenticated scope\`
            );
          }
          if (data.userId !== scopeKey) {
            throw new PermanentSyncError("SCOPE_VIOLATION", \`Cannot reassign Meal to different User\`);
          }
        } else {
          // Case B: Record doesn't exist (resurrection) - verify ownership from payload
          if (data.userId !== scopeKey) {
            throw new PermanentSyncError("SCOPE_VIOLATION", \`Cannot resurrect Meal into different User\`);
          }
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "Meal",
            keyPath: validKeyPath,
            operation: "update",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.meal.upsert({
          where: { id: validKeyPath[0] },
          create: data,
          update: data,
        });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    case "delete": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        const record = await tx.meal.findUnique({
          where: { id: validKeyPath[0] },
          select: { user: { select: { id: true } } },
        });

        if (record) {
          if (record.user.id !== scopeKey) {
            throw new PermanentSyncError(
              "SCOPE_VIOLATION",
              \`Unauthorized: Meal is not owned by the authenticated scope\`
            );
          }
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "Meal",
            keyPath: validKeyPath,
            operation: "delete",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.meal.deleteMany({
          where: { id: validKeyPath[0] },
        });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    default:
      throw new PermanentSyncError("UNKNOWN_OPERATION", \`Unknown operation: \${operation}\`);
  }
}

async function syncFoodEntry(
  event: OutboxEventRecord,
  data: z.infer<typeof validators.FoodEntry>,
  scopeKey: string,
  prisma: PrismaClient
): Promise<PushResult> {
  const { id, operation } = event;
  const keyPath = [data.id];
  const keyPathValidation = keyPathValidators.FoodEntry.safeParse(keyPath);
  if (!keyPathValidation.success) {
    throw new PermanentSyncError("KEYPATH_VALIDATION_FAILURE", "Invalid keyPath for FoodEntry");
  }

  const validKeyPath = keyPathValidation.data;

  switch (operation) {
    case "create": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        if (data.mealId == null) {
          throw new PermanentSyncError(
            "SCOPE_VIOLATION",
            \`Unauthorized: FoodEntry has null foreign key(s) in ownership path\`
          );
        }
        const parentRecord = await tx.meal.findUnique({
          where: { id: data.mealId },
          select: { user: { select: { id: true } } },
        });

        if (!parentRecord || parentRecord.user.id !== scopeKey) {
          throw new PermanentSyncError(
            "SCOPE_VIOLATION",
            \`Unauthorized: FoodEntry parent is not owned by authenticated scope\`
          );
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "FoodEntry",
            keyPath: validKeyPath,
            operation: "create",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.foodEntry.create({ data });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    case "update": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        const record = await tx.foodEntry.findUnique({
          where: { id: validKeyPath[0] },
          select: { meal: { select: { user: { select: { id: true } } } } },
        });

        if (record) {
          // Case A: Record exists - verify ownership from DB
          if (record.meal?.user.id !== scopeKey) {
            throw new PermanentSyncError(
              "SCOPE_VIOLATION",
              \`Unauthorized: FoodEntry is not owned by the authenticated scope\`
            );
          }
          if (data.mealId == null) {
            throw new PermanentSyncError(
              "SCOPE_VIOLATION",
              \`Unauthorized: FoodEntry has null foreign key(s) in ownership path\`
            );
          }
          const newParentRecord = await tx.meal.findUnique({
            where: { id: data.mealId },
            select: { user: { select: { id: true } } },
          });

          if (!newParentRecord || newParentRecord.user.id !== scopeKey) {
            throw new PermanentSyncError("SCOPE_VIOLATION", \`Cannot reassign FoodEntry to parent outside scope\`);
          }
        } else {
          // Case B: Record doesn't exist (resurrection) - verify ownership from payload
          if (data.mealId == null) {
            throw new PermanentSyncError(
              "SCOPE_VIOLATION",
              \`Unauthorized: FoodEntry has null foreign key(s) in ownership path\`
            );
          }
          const parent = await tx.meal.findUnique({
            where: { id: data.mealId },
            select: { user: { select: { id: true } } },
          });

          if (!parent || parent.user.id !== scopeKey) {
            throw new PermanentSyncError("SCOPE_VIOLATION", \`Cannot resurrect FoodEntry into unauthorized scope\`);
          }
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "FoodEntry",
            keyPath: validKeyPath,
            operation: "update",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.foodEntry.upsert({
          where: { id: validKeyPath[0] },
          create: data,
          update: data,
        });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    case "delete": {
      const result = await prisma.$transaction(async (tx) => {
        const existingLog = await tx.changelog.findUnique({
          where: { outboxEventId: event.id },
        });
        if (existingLog) {
          return { id, error: null, appliedChangelogId: existingLog.id };
        }

        const record = await tx.foodEntry.findUnique({
          where: { id: validKeyPath[0] },
          select: { meal: { select: { user: { select: { id: true } } } } },
        });

        if (record) {
          if (record.meal?.user.id !== scopeKey) {
            throw new PermanentSyncError(
              "SCOPE_VIOLATION",
              \`Unauthorized: FoodEntry is not owned by the authenticated scope\`
            );
          }
        }

        const newLog = await tx.changelog.create({
          data: {
            model: "FoodEntry",
            keyPath: validKeyPath,
            operation: "delete",
            scopeKey,
            outboxEventId: event.id,
          },
        });
        await tx.foodEntry.deleteMany({
          where: { id: validKeyPath[0] },
        });
        return { id, error: null, appliedChangelogId: newLog.id };
      });
      return result;
    }

    default:
      throw new PermanentSyncError("UNKNOWN_OPERATION", \`Unknown operation: \${operation}\`);
  }
}
"
`;

exports[`schema projection > generates local schema for valid input 1`] = `
"// This is a generated Prisma schema for the scoped database.
// It includes only the models that are synchronized with the client.

generator client {
  provider = "prisma-client"
  output   = "./generated"
}

datasource db {
  provider = "postgresql"
}

model User {
  id	String	@id
  name	String
  email	String	@unique
  emailVerified	Boolean	@default(false)
  image	String?
  createdAt	DateTime	@default(now())
  updatedAt	DateTime	@updatedAt
  boards	Board[]	@relation("BoardToUser")
}

model Board {
  id	String	@id @default(uuid(4))
  name	String
  createdAt	DateTime	@default(now())
  todos	Todo[]	@relation("BoardToTodo")
  user	User	@relation("BoardToUser", fields: [userId], references: [id])
  userId	String
}

model Todo {
  id	String	@id @default(uuid(4))
  title	String
  description	String?
  isCompleted	Boolean	@default(false)
  createdAt	DateTime	@default(now())
  board	Board	@relation("BoardToTodo", fields: [boardId], references: [id])
  boardId	String
}

enum ChangeOperation {
  create
  update
  delete
}

"
`;
